# cne-airbyte-template

./: .gitignore  .pre-commit-config.yaml  .terraform.lock.hcl  CLAUDE.md  CONVERSATION_SUMMARY.md  Makefile  README.md  locals.dev.tf  locals.prod.tf  locals.stage.tf  locals.tf  main.tf  outputs.tf  providers.tf  pyproject.toml  requirements.txt  terraform.tfvars.example  variables.tf
backend-config/: config.k8s.tfbackend
connections/: main.tf  providers.tf  variables.tf
destinations/bigquery/: main.tf  outputs.tf  providers.tf  variables.tf
ingestion/: providers.tf
resources/connections/: s3_to_bigquery.yaml
resources/destinations/: bigquery.json
resources/sources/: s3_to_bigquery.json
scripts/: airbyte_api.py  s3_to_bigquery.py
sources/s3/: main.tf  outputs.tf  providers.tf  variables.tf
