[project]
name = "cne-airbyte-template"
version = "0.1.0"
description = "Extensible Airbyte template with an example S3 → BigQuery pipeline"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
  "PyYAML>=6.0.1",
  "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"



